src/objects/AccountMaster__c.object
<CustomObject>
    <fields>
        <fullName>TankaIncTaxCal__c</fullName>
        <formula>IF (
$Setup.CommDefine__c.AccountNoTaxCalFlg__c != true ||
$Setup.CommDefine__c.RoundType__c = 2,
Case (
NULLVALUE( $Setup.CommDefine__c.UnitPriceDefKb__c, 0) ,
1, CEILING( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ),
2, CEILING( NULLVALUE( Field5__c, 0) ),
3, CEILING( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) * ( 1 + NULLVALUE (TaxRateCal__c, 0) ) ),
4, CEILING( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (TaxRateCal__c, 0) ) ),
0)
,
IF($Setup.CommDefine__c.RoundType__c = 0,
Case (
NULLVALUE( $Setup.CommDefine__c.UnitPriceDefKb__c, 0) ,
1, FLOOR( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) ),
2, FLOOR( NULLVALUE( Field5__c, 0) ),
3, FLOOR( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) * ( 1 + NULLVALUE (TaxRateCal__c, 0) ) ),
4, FLOOR( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (TaxRateCal__c, 0) ) ),
0)
,
Case (
NULLVALUE( $Setup.CommDefine__c.UnitPriceDefKb__c, 0) ,
1, ROUND( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) , 0),
2, ROUND( NULLVALUE( Field5__c, 0) , 0),
3, ROUND( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (ServiceRate__c, 0) ) * ( 1 + NULLVALUE (TaxRateCal__c, 0) ) , 0),
4, ROUND( NULLVALUE( Field5__c, 0) * ( 1 + NULLVALUE (TaxRateCal__c, 0) ) , 0),
0)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$単価(税込)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TankawithoutTaxSys__c</fullName>
        <inlineHelpText>画面、レポートなど使わない、システム内部利用項目</inlineHelpText>
        <label>単価(税抜)（システム用）</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TargetCost__c</fullName>
        <inlineHelpText>原価¥0のとき、設定</inlineHelpText>
        <label>原価率目標値</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxRateCal__c</fullName>
        <formula>jmstRef__r.TaxRate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>消費税</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>WorkAddress__c</fullName>
        <description>[人材勤務地]地域情報へ移行</description>
        <label>RFU(廃止)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkCondition__c</fullName>
        <description>[人材勤務条件]項目利用廃止</description>
        <label>RFU(廃止)</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkContent__c</fullName>
        <label>人材仕事内容</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkContractFile__c</fullName>
        <description>[契約書内容]項目利用廃止</description>
        <label>RFU(廃止)</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkContractMaxTerm__c</fullName>
        <description>[最大契約期間（月単位）]利用廃止</description>
        <label>RFU(廃止)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkContractMixTerm__c</fullName>
        <description>[最小契約期間（月単位）]利用廃止</description>
        <label>RFU(廃止)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkContractStartDt__c</fullName>
        <description>[契約可能開始日]利用廃止</description>
        <inlineHelpText>契約可能開始日(業者用)</inlineHelpText>
        <label>RFU(廃止)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkContractStartEt__c</fullName>
        <description>[契約可能終了日]利用廃止</description>
        <inlineHelpText>契約可能終了日(業者用)</inlineHelpText>
        <label>RFU(廃止)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkContract__c</fullName>
        <description>[契約条件]項目利用廃止</description>
        <label>RFU(廃止)</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkMinTime__c</fullName>
        <description>[労働時間下限（時）]利用廃止</description>
        <label>RFU(廃止)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkPayType__c</fullName>
        <description>「給料の支払い方式」 人材情報に以降</description>
        <label>RFU(廃止)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>日給</fullName>
                </value>
                <value>
                    <fullName>時給</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WorkRole__c</fullName>
        <label>人材役割</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkUnitPriceType__c</fullName>
        <label>人材単価単位</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>一式</fullName>
                </value>
                <value>
                    <fullName>月</fullName>
                </value>
                <value>
                    <fullName>日</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1__c</fullName>
        <label>名称1(ｶﾅ)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_2__c</fullName>
        <label>名称3(漢2)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_3__c</fullName>
        <label>名称4(漢3)</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>detail13__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>セットメニューに金額の内訳をセットする対象かどうかチェックを入れてください</inlineHelpText>
        <label>セット</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jmstRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>消費税マスタ</label>
        <referenceTo>JMST__c</referenceTo>
        <relationshipName>jmst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nextitemcode__c</fullName>
        <formula>VALUE(  IF(TEXT(ActionType__c) == &quot;プラン&quot;, Mid(Field3__c, 2, Len(Field3__c)-1), Field3__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$商品コード</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>proftPer__c</fullName>
        <formula>1 -  Genkaritsu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$粗利益率</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>会計商品</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Field3__c</columns>
        <columns>NAME</columns>
        <columns>jmstRef__c</columns>
        <columns>SCP_5__c</columns>
        <columns>Field4__c</columns>
        <columns>OP__c</columns>
        <columns>Field7__c</columns>
        <columns>Field5__c</columns>
        <columns>Field6__c</columns>
        <columns>Genkaritsu__c</columns>
        <columns>StsTaxfee__c</columns>
        <columns>GPChange__c</columns>
        <columns>CodeNumbers__c</columns>
        <columns>DPChange__c</columns>
        <columns>detail13__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>DinnerView</fullName>
        <columns>Field3__c</columns>
        <columns>NAME</columns>
        <columns>ProductEnName__c</columns>
        <columns>Field5__c</columns>
        <columns>Field7__c</columns>
        <columns>Genkaritsu__c</columns>
        <columns>TaxRateCal__c</columns>
        <columns>jmstRef__c</columns>
        <columns>DPChange__c</columns>
        <columns>GPChange__c</columns>
        <columns>OP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CookCount__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>会席商品</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>商品名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>R_Field3_ChangeValidate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT( ISNEW() ) ,
TEXT(ActionType__c) == &apos;プラン&apos; ,
NOT(ISCHANGED( PlanAutoSyncChk__c )) ,
 ISCHANGED( Field3__c ) 
)</errorConditionFormula>
        <errorDisplayField>Field3__c</errorDisplayField>
        <errorMessage>商品処理種別は「プラン」場合、商品コードを変更できません</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R_Field_ChangeValidate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT( ISNEW() ) ,
TEXT(ActionType__c) == &apos;プラン&apos; ,
NOT(ISCHANGED( PlanAutoSyncChk__c )) ,
OR(
ISCHANGED(Name),
ISCHANGED(Field5__c),
ISCHANGED(Field4__c),
ISCHANGED(GPChange__c),
ISCHANGED(ServiceRate__c),
ISCHANGED(jmstRef__c),
ISCHANGED(BasePlanFlg__c),
ISCHANGED(PlanBathTaxAccMstRef__c))
)</errorConditionFormula>
        <errorMessage>商品処理種別は「プラン」場合、商品名、単価、リンクＤＰコード、#GP、サービス料(%)、消費税マスタ、ベースプラン、プラン(入湯税)（システム用）を変更できません</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>R_ShopInfoRef_ChangeValidate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(LEN( $Setup.CommDefine__c.ShopAccountSearchDiv__c ) &gt; 0 ),
NOT( ISNEW() ) ,
TEXT(ActionType__c) == &apos;プラン&apos; ,
NOT(ISCHANGED( PlanAutoSyncChk__c )) ,
 ISCHANGED( ShopInfoRef__c ) 
)</errorConditionFormula>
        <errorMessage>商品処理種別は「プラン」場合、店舗情報を変更できません</errorMessage>
    </validationRules>
</CustomObject>